[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/audio/cardSlide8_FM.ogg" type="AudioStream" id=1]
[ext_resource path="res://assets/audio/pickup1_FM.ogg" type="AudioStream" id=2]
[ext_resource path="res://assets/background/FunctionMemoryBG/backgroundColorGrass.png" type="Texture" id=3]
[ext_resource path="res://minigames/functionmemory/ui/HUDFM.tscn" type="PackedScene" id=4]
[ext_resource path="res://minigames/functionmemory/levels/Level0FM.gd" type="Script" id=5]

[node name="Level0FM" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="FlipCard" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )

[node name="PairFound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -188.0
margin_bottom = 236.0
texture = ExtResource( 3 )

[node name="HUDFM" parent="." instance=ExtResource( 4 )]

[node name="MatchTimer" type="Timer" parent="."]
one_shot = true

[node name="FlipTimer" type="Timer" parent="."]
one_shot = true

[node name="SecondsTimer" type="Timer" parent="."]

[node name="grid" type="GridContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -140.0
columns = 5
